production.css;#toc table hack updated to prevent the longer TOC entries from going off screen

--- a/production.css
+++ b/production.css
@@ -117,7 +117,7 @@ tbody {
 }
 
 #toc table {
-  width: 280%;
+  width: 180%;
 }
 
 #toc h1 {
